typescript/checker/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            342,
        ),
        hi: BytePos(
            343,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts:4:5
  |
4 |     t = u; // error
  |     ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            363,
        ),
        hi: BytePos(
            364,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts:5:5
  |
5 |     u = t; // error
  |     ^

